--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "gameboard.js",
   "scripts": {
     "test": "jest --colors",
-    "run": "node ./src/index.js"
+    "start": "node ./src/index.js"
   },
   "homepage": "https://github.com/Kparine/battleship#readme",
   "devDependencies": {
