--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "name": "battleship",
   "version": "1.0.0",
+  "type": "module",
   "description": "battleship game",
   "main": "gameboard.js",
   "scripts": {
     "test": "jest --colors",
-    "start": "node ./src/index.js"
+    "start": "nodemon ./src/index.js"
   },
   "homepage": "https://github.com/Kparine/battleship#readme",
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
     "babel-jest": "^26.3.0",
-    "jest": "^26.4.2"
+    "jest": "^26.4.2",
+    "nodemon": "^2.0.4"
   }
 }
